[gd_scene load_steps=13 format=3 uid="uid://b447cf2ojg12f"]

[ext_resource type="Texture2D" uid="uid://dlq2q2n2rboik" path="res://assets/sprites/shootingEnemy/shooter1.png" id="1_blw1m"]
[ext_resource type="Script" path="res://entities/shooter.gd" id="1_gaup1"]
[ext_resource type="Texture2D" uid="uid://dwn8krl7k1aft" path="res://assets/sprites/shootingEnemy/shooter2.png" id="2_6vtwk"]
[ext_resource type="Shader" path="res://entities/great_indigestion.gdshader" id="2_81jpt"]
[ext_resource type="Texture2D" uid="uid://dop6pwahp20ki" path="res://assets/sprites/shootingEnemy/shooter3.png" id="3_c5oiq"]
[ext_resource type="Texture2D" uid="uid://dig8pbcm3fhhd" path="res://assets/sprites/shootingEnemy/shooter4.png" id="4_ufv3u"]
[ext_resource type="PackedScene" uid="uid://4n2ppvs6ckaw" path="res://global/fireFX.tscn" id="5_ggovo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1b63c"]
shader = ExtResource("2_81jpt")
shader_parameter/resolution = 64.0

[sub_resource type="SpriteFrames" id="SpriteFrames_a8yjx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_blw1m")
}, {
"duration": 1.0,
"texture": ExtResource("2_6vtwk")
}, {
"duration": 1.0,
"texture": ExtResource("3_c5oiq")
}, {
"duration": 1.0,
"texture": ExtResource("4_ufv3u")
}, {
"duration": 1.0,
"texture": ExtResource("3_c5oiq")
}, {
"duration": 1.0,
"texture": ExtResource("2_6vtwk")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_eru45"]
radius = 26.7316

[sub_resource type="CircleShape2D" id="CircleShape2D_2uuss"]
radius = 8.80282

[sub_resource type="CircleShape2D" id="CircleShape2D_ii72y"]
radius = 113.018

[node name="Shooter" type="CharacterBody2D"]
top_level = true
scale = Vector2(0.2, 0.2)
script = ExtResource("1_gaup1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1b63c")
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_a8yjx")
autoplay = "default"
frame = 5
frame_progress = 0.483956

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
scale = Vector2(80.25, 80.25)
shape = SubResource("CircleShape2D_eru45")

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
scale = Vector2(14.2, 14.2)
shape = SubResource("CircleShape2D_2uuss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ii72y")

[node name="fireFX" parent="." instance=ExtResource("5_ggovo")]
scale = Vector2(20, 20)

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="area_entered" from="Body" to="." method="_on_body_area_entered"]
[connection signal="animation_finished" from="fireFX" to="." method="_on_fire_fx_animation_finished"]
